Update build settings and disable failing unit tests